# cloudforge3d

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml
cloud-deploy/: README.md  app.py
cloud-deploy/cloud_deploy/: cloud_deploy_stack.py
desktop-app/: package.json  pnpm-lock.yaml  tailwind.config.js
desktop-app/src/: app.css  app.html
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: errors.rs  lib.rs  main.rs  state.rs
desktop-app/src-tauri/src/biz/: mod.rs  settings.rs
desktop-app/src-tauri/src/biz/render_job/: controller.rs  mod.rs  processor.rs
desktop-app/src-tauri/src/infra/: mod.rs  settings.rs
desktop-app/src-tauri/src/infra/db/: init.rs  migration.rs  mod.rs  pool.rs
desktop-app/src-tauri/src/infra/db/render_job/: entity.rs  repo.rs
desktop-app/src-tauri/src/infra/db/render_task/: entity.rs  mod.rs  repo.rs
desktop-app/src-tauri/src/infra/s3/: client_manager.rs  job_file.rs  mod.rs
desktop-app/src-tauri/src/init/: deps.rs  mod.rs  repo.rs  s3.rs
desktop-app/src-tauri/src/interface/: events.rs  greet.rs  mod.rs
desktop-app/src-tauri/src/interface/cmd/: mod.rs  settings.rs
desktop-app/src-tauri/src/spec/: mod.rs
desktop-app/src-tauri/src/spec/proto/: .gitignore  mod.rs
desktop-app/src/lib/components/display/: Property.svelte
desktop-app/src/lib/components/input/: PathInput.svelte
desktop-app/src/lib/data/: jobState.ts
desktop-app/src/lib/state/: index.ts
desktop-app/src/routes/: +layout.svelte  +page.svelte
desktop-app/src/routes/settings/: +page.svelte
job-runner/: .gitignore  Dockerfile.blender  README.md  pyproject.toml
job-runner/runner/cmd/: ocio_test.py  render_cpu.py  sqs_read_test.py
job-runner/runner/lib/: blender.py  ocio.py  s3.py  sqs.py
spec/cf3d/v1/: jobs.proto  settings.proto  tasks.proto
(+38 files in other folders)
