[package]
name = "cloudforge3d"
version = "0.1.0"
description = "Desktop application for rendering Blender jobs in the cloud."
authors = ["Callum Gundlach"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cloudforge3d_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tonic = "0.12.3"
rusqlite = { version = "0.32.1", features = ["chrono"] }
rusqlite_migration = "1.3.1"
tokio = "1.40.0"
r2d2_sqlite = "0.25.0"
r2d2 = "0.8.10"
tauri-plugin-log = "2"
log = "0.4.22"
chrono = "0.4.38"
thiserror = "1.0.64"
prost = "0.13.3"
prost-types = "0.13.3"
pbjson = "0.7.0"
pbjson-types = "0.7.0"
